// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`CardContent Component > Snapshots > matches snapshot for all variants > variant-default 1`] = `
<div
  class="css-xfhhy1"
  data-testid="cardcontent"
  role="region"
>
  default
   CardContent
</div>
`;

exports[`CardContent Component > Snapshots > matches snapshot for default props 1`] = `
<div
  class="css-xfhhy1"
  data-testid="cardcontent"
  role="region"
>
  Default CardContent
</div>
`;
